feat(econews): update API add Slug Field
